Se agrega estilo con css a la pagina creada en html

--- a/semana-1/jaimeacabreraa-5609/index.html
+++ b/semana-1/jaimeacabreraa-5609/index.html
@@ -5,14 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Mi Perfil</title>
 </head>
 
 <body>
-    <h1>Jaime Andrés Cabrera Avendaño</h1>
-    <img src="https://i.ibb.co/C0ZP68z/profile.jpg" alt="profile" border="0"></a>
+    <div class="container">
+        <div id="names">JAIME</div>
+    </div>
+    <div class="container">
+        <div id="surnames">CABRERA</div>
+    </div>
+    <div class="container pic-profile">
+        <img src="https://i.ibb.co/C0ZP68z/profile.jpg" alt="profile" border="0"></a>
+    </div>
 
-    <div>
+    <div class="container-fluid mt50">
         <h2>🧔🏾 Perfil</h2>
         <hr>
         <p>Soy Desarrollador Full Stack. Actualmente estoy estudiando Ingeniería de Software, soy Tecnólogo en Análisis
@@ -20,7 +28,7 @@
             capacitado en programación front-end y back-end. Experto en diseño web, diferentes lenguajes de
             programación, base de datos, servidores, API's y sistemas de control de versiones.</p>
     </div>
-    <div>
+    <div class="container-fluid">
         <h2>💻 Tecnologías</h2>
         <hr>
         <h3>Lenguajes de Programación</h3>
@@ -73,14 +81,16 @@
             </ul>
         </div>
     </div>
-    <div>
+    <div class="container-fluid">
         <h2>💪🏾 Habilidader Fuertes</h2>
         <hr>
-        <li>HTTP y REST.</li>
-        <li>Arquitectura Web</li>
-        <li>Bases de Datos y Almacenamiento web</li>
+        <ul>
+            <li>HTTP y REST.</li>
+            <li>Arquitectura Web</li>
+            <li>Bases de Datos y Almacenamiento web</li>
+        </ul>
     </div>
-    <div>
+    <div class="container-fluid">
         <h2>👨🏾‍💻 Experiencia</h2>
         <hr>
         <div>
@@ -107,7 +117,7 @@
                 soluciones de software a ser desarrolladas.</p>
         </div>
     </div>
-    <div>
+    <div class="container-fluid">
         <h2>👨🏾‍🎓 Educación</h2>
         <hr>
 
@@ -139,12 +149,14 @@
         </div>
 
     </div>
-    <div>
+    <div class="container-fluid">
         <h2>🏆 Logros</h2>
         <hr>
-        <li>Primer puesto Bootcamp SENA 2020</li>
+        <ul>
+            <li>Primer puesto Bootcamp SENA 2020</li>
+        </ul>
     </div>
-    <div>
+    <div class="container-fluid">
         <h2>🌎 Contacto</h2>
         <hr>
         <div>📱3123371764</div>
